--- a/index.html
+++ b/index.html
@@ -52,5 +52,11 @@
             document.getElementById('totalGeoGridPrice').innerText = totalPrice.toFixed(2);
         }
         </script>
+     </script>
+    <iframe width="600" height="500" src="https://app.localbrandmanager.com/stats/geogrids/l67n1qr5?layout=minimal"
+      title="Geogrid"
+      frameborder="0"
+      allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+    </iframe>
     </body>
     </html>
