--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         }
         </script>
      </script>
-    <iframe width="600" height="500" src="https://app.localbrandmanager.com/stats/geogrids/l67n1qr5?layout=minimal"
-      title="Geogrid"
-      frameborder="0"
-      allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-    </iframe>
+    <iframe width="600" height="500" src="https://local.moonraker.ai/stats/geogrid_configs/4z2w3r1z/search_terms/v5j2328z/latest_geogrid?layout=minimal "
+title="Geogrid"
+frameborder="0"
+allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
+    
     </body>
     </html>
