--- a/index.html
+++ b/index.html
@@ -44,14 +44,8 @@
         <button onclick="calculateGeoGridPrice()">Calculate Price</button>
         <p>Total Price: $<span id="totalGeoGridPrice">0.00</span></p>
 
-        <script>
-        function calculateGeoGridPrice() {
-            var unitPrice = 0.001385; // price per GeoGrid unit
-            var units = document.getElementById('geogridCount').value;
-            var totalPrice = units * unitPrice;
-            document.getElementById('totalGeoGridPrice').innerText = totalPrice.toFixed(2);
-        }
-        </script>
+        <iframe src="https://local.moonraker.ai/stats/geogrid_configs/8lg6131z" width="800" height="600" frameborder="0" allowfullscreen></iframe>
+
      </script>
     <iframe width="600" height="500" src="https://local.moonraker.ai/stats/geogrid_configs/4z2w3r1z/search_terms/v5j2328z/latest_geogrid?layout=minimal "
 title="Geogrid"
